objects/AIA_Plan__c.object
<CustomObject>
    <fields>
        <fullName>All_Market_Segments__c</fullName>
        <label>All Market Segments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large(1000+)</fullName>
                </value>
                <value>
                    <fullName>Large(200-999)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AllergySerumsComment__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AllergySerumsComment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllergySerums__c</fullName>
        <label>AllergySerums</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplyCoinsuranceToOOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyCoinsuranceToOOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyCopayToOOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyCopayToOOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyDeductibleToOOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyDeductibleToOOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyPerAdmissionCopayToOOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyPerAdmissionCopayToOOP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_Coinsurance_To_OOP__c</fullName>
        <label>Apply Coinsurance To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Copay_To_OOP__c</fullName>
        <label>Apply Copay To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Deductible_To_OOP__c</fullName>
        <label>Apply Deductible To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_Per_Admission_Copay_To_OOP__c</fullName>
        <label>Apply Per Admission Copay To OOP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDF_Configuration_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BDF Configuration Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BenefitPeriodMaximum__c</fullName>
        <description>B-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BenefitPeriodMaximum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDH_Fund_Type__c</fullName>
        <label>CDH Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
                <value>
                    <fullName>Blue Fund</fullName>
                </value>
                <value>
                    <fullName>Compatitble</fullName>
                </value>
                <value>
                    <fullName>HRA Non-Integrated - Medical &amp;amp; RX ded not combined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Type__c</fullName>
        <label>CDH Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>HRA Integrated</fullName>
                </value>
                <value>
                    <fullName>HRA Non-Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH__c</fullName>
        <label>CDH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_ProductId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CF ProductId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_DefaultAmount_c__c</fullName>
        <label>Coinsurance_DefaultAmount__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Configuration_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BRF Configuration Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_DefaultAmount__c</fullName>
        <label>Copay_Type_1_DefaultAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_IsCovered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copay_Type_1_IsCovered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type__c</fullName>
        <label>Copay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCP Copay</fullName>
                </value>
                <value>
                    <fullName>Specialist Copay</fullName>
                </value>
                <value>
                    <fullName>General Copay</fullName>
                </value>
                <value>
                    <fullName>Per Admission Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountOfNetworks__c</fullName>
        <label>CountOfNetworks</label>
        <summaryForeignKey>AIA_Plan_Network__c.Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Networks__c</fullName>
        <label>Count of Networks</label>
        <summaryForeignKey>AIA_Plan_Network__c.Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeductibleAccumulatorMethod__c</fullName>
        <label>DeductibleAccumulatorMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppCopayApply__c</fullName>
        <label>DiabeticSuppCopayApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppDedApply__c</fullName>
        <label>DiabeticSuppDedApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiabeticSuppMandateApply__c</fullName>
        <label>DiabeticSuppMandateApply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The date that the plan is available</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ErectileDysfuncComment__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ErectileDysfuncComment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErectileDysfunc__c</fullName>
        <label>ErectileDysfunc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ExtID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyDedCalculation__c</fullName>
        <description>B-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FamilyDedCalculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyOOPCalculation__c</fullName>
        <description>B-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FamilyOOPCalculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FertilityAgentsComment__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FertilityAgentsComment</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FertilityAgents__c</fullName>
        <label>FertilityAgents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Plan_Name__c</fullName>
        <formula>Plan_Name__c +  IF(ISBLANK(Option__c), '', ' ' + Option__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenDispsng__c</fullName>
        <label>GenDispsng</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MANDATORY</fullName>
                </value>
                <value>
                    <fullName>RESTRICTED</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY</fullName>
                </value>
                <value>
                    <fullName>VOLUNTARY-standard: member charged applicable copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GenReferralDescription__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GenReferralDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GenReferral__c</fullName>
        <description>b-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GenReferral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GenStepTherapy__c</fullName>
        <label>GenStepTherapy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrowthHormone__c</fullName>
        <label>GrowthHormone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HBSelectGeneric__c</fullName>
        <label>HBSelectGeneric</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waive Ded/Waive Copay (Standard)</fullName>
                </value>
                <value>
                    <fullName>Waive Ded/Apply Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Benefit_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Benefit Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INN_OON_Ded_Contribute_To_Each_Other__c</fullName>
        <label>INN &amp; OON Ded Contribute To Each Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Annual_Maximum_combined__c</fullName>
        <label>INN and OON Annual Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_Lifetime_Maximum_combined__c</fullName>
        <label>INN and OON Lifetime Maximum combined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_and_OON_OOP_Contribute_To_Each_Other__c</fullName>
        <description>AIA Q2 2017 Release</description>
        <label>INN and OON OOP Contribute To Each Other</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INN_or_Contracted_Provider_Penalty__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN or Contracted Provider Penalty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntegratedDedIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Longer Used</description>
        <label>IntegratedDedIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegratedOOPIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IntegratedOOPIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_DedIndicator__c</fullName>
        <label>Integrated DedIndicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_OOP_Indicator__c</fullName>
        <label>Integrated OOP Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GHMSI</fullName>
                </value>
                <value>
                    <fullName>BlueChoice</fullName>
                </value>
                <value>
                    <fullName>CFMI</fullName>
                </value>
                <value>
                    <fullName>CFBC</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Magellan_Behavioral_Health__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Magellan Behavioral Health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsMaintDaysSupp__c</fullName>
        <label>MailOrdDispnsMaintDaysSupp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrdDispnsNMaintDaysSupp__c</fullName>
        <label>MailOrdDispnsNMaintDaysSupp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailOrderAllDrugs__c</fullName>
        <label>MailOrderAllDrugs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network_Levels__c</fullName>
        <label>Network Levels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>RX Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>RX Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OON_Fully_Insured__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OON - Fully Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOPAccumulatorMethod__c</fullName>
        <label>OOPAccumulatorMethod</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stacked</fullName>
                </value>
                <value>
                    <fullName>Unstacked</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OTCCovered__c</fullName>
        <label>OTCCovered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Option</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OralChemoCopayApply__c</fullName>
        <label>OralChemoCopayApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OralChemoDedApply__c</fullName>
        <label>OralChemoDedApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OralChemoMandateApply__c</fullName>
        <label>OralChemoMandateApply</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Requirements__c</fullName>
        <description>B-03464</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCS_Last_Updated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Product_NameL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Product Name</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Product</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Active_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <description>Unique Key in PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PCS Plan Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreRenewalPlanID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PreRenewalPlanID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrescriptionComments__c</fullName>
        <description>B-03443</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PrescriptionComments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrescriptionCovrdArrngmnt__c</fullName>
        <description>B-03443</description>
        <label>PrescriptionCovrdArrngmnt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carved Out</fullName>
                </value>
                <value>
                    <fullName>Covered under Drug Program</fullName>
                </value>
                <value>
                    <fullName>Not Covered under Drug Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrevntvCovrd__c</fullName>
        <label>PrevntvCovrd</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrevntvDrugCopayAmount__c</fullName>
        <label>PrevntvDrugCopayAmount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriorAuth__c</fullName>
        <label>PriorAuth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>